--- a/css/home.css
+++ b/css/home.css
@@ -1,16 +1,22 @@
 
 body{
-  margin-top: 3vw;
+  margin-top: 5rem;
 	background-color: whitesmoke;
   opacity: 0;
   transition: opacity 1s ease-in-out;
 }
 
+body.home-page {
+  margin-top: 0.5vw;
+}
+
+
 .top-bar {
   position: fixed;
-  top: 2.5rem;
+  top: 3rem;
   left: 0;
   right: 0;
+  height: 40px;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -44,15 +50,26 @@ body.dark #home-btn:hover { color: #eee; }
   color: #888;
   outline: none;
   transition: color 0.2s;
-  line-height: 0;
   display: none;
+  position: relative;
+  width: 28px;
+  height: 28px;
+  flex-shrink: 0;
 }
 
 #eye-toggle:hover { color: #333; }
 body.dark #eye-toggle { color: #666; }
 body.dark #eye-toggle:hover { color: #eee; }
 
-#eye-closed { display: none; }
+#eye-open, #eye-closed {
+  transition: opacity 0.4s ease;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+#eye-closed { opacity: 0; }
+#eye-open { opacity: 1; }
 
 .filter-bar {
   display: none;
@@ -73,7 +90,7 @@ body.dark #eye-toggle:hover { color: #eee; }
 
 .filter-pills {
   position: fixed;
-  top: 4.5rem;
+  top: 5rem;
   left: 2rem;
   display: flex;
   flex-direction: column;
@@ -187,66 +204,34 @@ body.dark #eye-toggle:hover { color: #eee; }
 	height: auto;
   }
 
-/* From Uiverse.io by Cevorob */
-.burger {
-    width: 40px;
-    height: 25px;
-    background: transparent;
-    cursor: pointer;
-    display: block;
-    transform: scale(0.7);
-  }
+.burger-btn {
+  background: none;
+  border: none;
+  padding: 0;
+  cursor: pointer;
+  color: #888;
+  outline: none;
+  display: flex;
+  align-items: center;
+  transition: color 0.2s;
+  position: relative;
+  width: 28px;
+  height: 28px;
+}
 
-  .burger input {
-    display: none;
-  }
+.burger-btn:focus { outline: none; }
+.burger-btn:hover { color: #333; }
+body.dark .burger-btn { color: #888; }
+body.dark .burger-btn:hover { color: #eee; }
 
-  .burger span {
-    display: block;
-    position: absolute;
-    height: 2px;
-    width: 100%;
-    background: #888;
-    border-radius: 9px;
-    opacity: 1;
-    left: 0;
-    transform: rotate(0deg);
-    transition: .25s ease-in-out;
-  }
+#burger-icon, #close-icon {
+  position: absolute;
+  top: 0;
+  left: 0;
+  transition: opacity 0.3s ease;
+}
 
-  .burger span:nth-of-type(1) {
-    top: 0px;
-    transform-origin: left center;
-  }
-
-  .burger span:nth-of-type(2) {
-    top: 50%;
-    transform: translateY(-50%);
-    transform-origin: left center;
-  }
-
-  .burger span:nth-of-type(3) {
-    top: 100%;
-    transform-origin: left center;
-    transform: translateY(-100%);
-  }
-
-  .burger input:checked ~ span:nth-of-type(1) {
-    transform: rotate(45deg);
-    top: 0px;
-    left: 5px;
-  }
-
-  .burger input:checked ~ span:nth-of-type(2) {
-    width: 0%;
-    opacity: 0;
-  }
-
-  .burger input:checked ~ span:nth-of-type(3) {
-    transform: rotate(-45deg);
-    top: 28px;
-    left: 5px;
-  }
+#close-icon { opacity: 0; }
 
   .nav-menu {
     position: fixed;
@@ -261,9 +246,6 @@ body.dark #eye-toggle:hover { color: #eee; }
     pointer-events: none;
 }
 
-.burger input:checked ~ .nav-menu {
-    display: flex;
-}
 
 li{
     list-style-type: none;
